--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylex.css">
     <title>Portfolio Matias Gonzalez</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="titulo">
-                <h1>Matias Gonzalez</h1>
-            </div>
-            <div>
-                <ul class="lista">
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#info">Info</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                </ul>
-            </div>
+            <h1>Matias Gonzalez</h1>
+            <ul class="lista">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#info">Info</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
         </nav>
     </header>
 
     <section id="inicio">
-        
+
     </section>
 
 
