--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1>Matias Gonzalez</h1>
+            <h1 class="nav-h1">Matias Gonzalez</h1>
             <ul class="lista">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#info">Info</a></li>
@@ -21,8 +21,13 @@
         </nav>
     </header>
 
-    <section id="inicio">
-
+    <section id="inicio" class="inicio">
+        <img class="imagen" src="profile-pic.jpeg" alt="Foto de Matias Gonzalez">
+        <div class="texto-inicio">
+            <p>Hola! mi nombre es</p>
+            <h1>Matias Gonzalez</h1>
+            <p>soy desarrollador web</p>
+        </div>
     </section>
 
 
