Section Info terminada

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section id="inicio" class="inicio">
-        <img class="imagen" src="profile-pic.jpeg" alt="Foto de Matias Gonzalez">
+        <img class="imagen" src="img/profile-pic.jpeg" alt="Foto de Matias Gonzalez">
         <div class="texto-inicio">
             <p>Hola! mi nombre es</p>
             <h1>Matias Gonzalez</h1>
@@ -31,13 +31,40 @@
     </section>
 
 
-    <section id="info">
-
+    <section id="info" class="info-cont">
+        <div class="ancho-bio">
+            <div class="bio p-t">
+                <h1>Biografia</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus mi non arcu venenatis hendrerit. Proin non massa lacinia, mollis ante et, auctor velit. Duis at ante purus. Aenean dignissim urna sapien, sed cursus lectus convallis vel. Proin nibh erat, pulvinar sed lectus a, eleifend eleifend felis. Etiam dignissim pharetra ante, et dignissim mauris imperdiet quis. Cras nibh elit, tincidunt at justo ac, bibendum auctor justo. Donec urna ipsum, fringilla a tellus sit amet, ultricies vestibulum dolor. Etiam fringilla, nisi pretium iaculis bibendum, arcu arcu aliquet metus, eget commodo felis orci quis ipsum. In ac scelerisque velit.
+                    <br>
+                Sed ullamcorper nibh quis ornare vehicula. Nunc viverra eu elit auctor mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce et nibh ex. Nulla ut maximus ex. Vestibulum quis sem nec sem aliquet convallis. Ut porta enim diam, id consequat neque bibendum sit amet. Suspendisse purus nulla, dictum vel velit id, varius aliquet felis. Curabitur at vehicula est. Integer vehicula vel urna sed mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam gravida fermentum dignissim. Cras posuere bibendum purus et mattis. Ut ultricies ullamcorper nisl et gravida. Nam magna nibh, finibus et rhoncus ac, faucibus in sem.
+                </p>
+            </div>
+            <div class="conocimientos p-t">
+                <h1>Conocimientos</h1>
+                <ul class="lista flex">
+                    <li>
+                        <img src="img/html.png" alt="html pic">
+                        <p>HTML</p>
+                    </li>
+                    <li>
+                        <img src="img/css.png" alt="css pic" id="css-pic">
+                        <p>CSS</p>
+                    </li>
+                    <li>
+                        <img src="img/js.png" alt="js pic">
+                        <p>JavaScript</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 
 
-    <section id="contacto">
-
+    <section id="contacto" class="info-cont contacto">
+        <div class="ancho-bio">
+            <h1 class="p-t">Contacto</h1>
+        </div>
     </section>
 </body>
 </html>
