--- a/index.html
+++ b/index.html
@@ -68,26 +68,27 @@
                 <div class="p-t mensaje">
                     <label for="nombre">Nombre:</label>
                     <br>
-                    <input type="text" id="nombre" name="nombre" required class="campo">
+                    <input type="text" id="nombre" name="nombre" class="campo">
                 </div>
 
                 <div class="p-t mensaje">
                     <label for="email">Correo Electrónico:</label>
                     <br>
-                    <input type="email" id="email" name="email" required class="campo">
+                    <input type="email" id="email" name="email" class="campo">
                 </div>
         
                 <div class="p-t mensaje">
                     <label for="mensaje">Mensaje:</label>
                     <br>
-                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+                    <textarea id="mensaje" name="mensaje" rows="4"></textarea>
                 </div>
         
                 <div class="p-t">
-                    <input type="submit" value="Enviar" class="button">
+                    <input type="submit" value="Enviar" class="button" onclick="validar()">
                 </div>
             </form>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
